Video Analytics Bugfix: Fix index out of bounds error. Fix quit_handler. Input required fields for API calls
